--- a/MVCUploadFileAngular/Views/Home/Index.cshtml
+++ b/MVCUploadFileAngular/Views/Home/Index.cshtml
@@ -1,32 +1,11 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Upload Files";
 }
 
-<form class="form-horizontal" role="form" data-ng-controller="FileUploadCtrl as vm" data-ng-init="vm.init()">
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="email">Email:</label>
-        <div class="col-sm-10">
-            <input type="email" class="form-control" id="email" placeholder="Enter email">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="pwd">Password:</label>
-        <div class="col-sm-10">
-            <input type="password" class="form-control" id="pwd" placeholder="Enter password">
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <div class="checkbox">
-                <label><input type="checkbox"> Remember me</label>
-            </div>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Submit</button>
-        </div>
-    </div>
-</form>
+<div ng-cloak>
+    <toaster-container></toaster-container>
+
+    <eeb-files-uploader></eeb-files-uploader>
+</div>
 
