add functionalities (get, upload, delete)

--- a/MVCUploadFileAngular/Views/Shared/_Layout.cshtml
+++ b/MVCUploadFileAngular/Views/Shared/_Layout.cshtml
@@ -4,9 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <script src="~/build/vendor.bundle.js"></script>
-    <script src="~/build/bundle.js"></script>
+    <link rel="stylesheet" href="/build/bundle.css" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -17,7 +15,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("File Upload With AngularJs", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -33,5 +31,8 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
+
+    <script src="~/build/vendor.bundle.js"></script>
+    <script src="~/build/bundle.js"></script>
 </body>
 </html>
